--- a/karl/views/static/ux2/css/responsive/1024.less
+++ b/karl/views/static/ux2/css/responsive/1024.less
@@ -102,7 +102,7 @@
         a {
             color: #bbb;
             line-height: 3.15em;
-            text-shadow: 0 -1px 0 black;
+            //text-shadow: 0 -1px 0 black;
         }
         a:hover{
             color: #fff;
