--- a/karl/views/static/ux2/css/responsive/2024.less
+++ b/karl/views/static/ux2/css/responsive/2024.less
@@ -1,7 +1,7 @@
 @media only screen and (min-width: 2024px) {
-    body {
-        font-size: (@baseFontSize + 3)/@baseFontSize * 1em;
-    }
+    // body {
+    //     font-size: (@baseFontSize + 3)/@baseFontSize * 1em;
+    // }
     .contentWrapper {
         padding: 1.33em 10%;
     }
