--- a/karl/views/static/ux2/css/typography.less
+++ b/karl/views/static/ux2/css/typography.less
@@ -66,11 +66,11 @@
 
 body {
     font-size: @baseFontSize;
-    line-height: 1.5;
+    line-height: 1.25;
     font-family: @baseFont;
     text-rendering: optimizeLegibility;
     .css3_linear_gradient(@bodyBg, darken(@bodyBg, 3%));
-    font-size: (@baseFontSize - 4)/@baseFontSize;
+    //font-size: (@baseFontSize - 4)/@baseFontSize;
     position: relative;
 }
 
@@ -95,7 +95,7 @@ h3 {
 
 h4 {
     font-size: 1.185em;
-    margin: 1.185em 0 .75em;    
+    margin: 1.185em 0 .75em;
 }
 .normal {
     font-size: 1em;
@@ -105,7 +105,7 @@ h4 {
     font-family: @smallestbaseFont;
 }
 .smallest {
-    font-size: 10px;
+    font-size: 0.70em;
     font-family: @smallestbaseFont;
 }
 .larger {
