--- a/karl/views/static/ux2/css/elements/navs.less
+++ b/karl/views/static/ux2/css/elements/navs.less
@@ -40,7 +40,7 @@
   padding: 3px 15px;
   margin-left:  -15px;
   margin-right: -15px;
-  text-shadow: 0 1px 0 rgba(255,255,255,.5);
+  //text-shadow: 0 1px 0 rgba(255,255,255,.5);
 }
 .nav-list .nav-header {
   font-size: 11px;
@@ -56,7 +56,7 @@
 .nav-list .active > a,
 .nav-list .active > a:hover {
   color: @bodyBg;
-  text-shadow: 0 -1px 0 rgba(0,0,0,.2);
+  //text-shadow: 0 -1px 0 rgba(0,0,0,.2);
   background-color: @baseColor1;
 }
 .nav-list [class^="icon-"] {
