--- a/karl/views/static/ux2/css/responsive/640.less
+++ b/karl/views/static/ux2/css/responsive/640.less
@@ -15,7 +15,7 @@ h2#search-toggle {
 }
 #top-bar {
     .gradientBar(#444, #222);
-    text-shadow: 0 -1px 0 black;
+    //text-shadow: 0 -1px 0 black;
 }
 #bcpanel-global-nav {
     .horList();
@@ -119,7 +119,7 @@ h2#navigation-toggle {
     .css3_border_radius(.5em .5em 0 0);
 }
 .noSectionMenu #global-nav .selected a:after {
-    border-bottom-color: #eaddcb;
+    border-bottom-color: @white;
 }
 a.moreToggle {
     background-image: url('../img/cog_section.png');
