--- a/karl/views/static/ux2/css/responsive/1024.less
+++ b/karl/views/static/ux2/css/responsive/1024.less
@@ -22,14 +22,14 @@
     nav.search {
         position: absolute;
         right: 0;
-        top: 2.35em;
+        top: 2.70em;
         .col(4);
         width: @total-width*((((@gutter-width+@column-width)*4)-@gutter-width) / @_gridsystem-width);
         padding-left: @total-width*((@gutter-width*.5)/@_gridsystem-width);
         padding-right: @total-width*((@gutter-width*.5)/@_gridsystem-width);
         margin-right: 0;
         background: #222;
-        .css3_border_radius(0 0 .5em .5em);
+        .css3_border_radius(0 0 .25em .25em);
     }
     form#search-form {
         display: block;
@@ -144,9 +144,9 @@
         padding-top: 3.5em;
     }
     .filter {
-        padding: @space/3 * 0.9em;
+        padding: @space/3 * 1em;
         .alphabet {
-            font-size: .9em;
+            font-size: 1em;
         }
     }
 }
