--- a/karl/views/static/ux2/css/responsive/640.less
+++ b/karl/views/static/ux2/css/responsive/640.less
@@ -69,18 +69,18 @@ h2#navigation-toggle {
         line-height: 2.6923em;
         font-family: @fancyFont;
         font-weight: normal;
-        font-size: 0.889em;
-        color: #bbb;
+        font-size: 1em;
+        color: @grayLight;
         background-image: none;
         text-decoration: none;
         &:hover {
-            color: #fff;
+            color: @white;
         }
     }
     .selected a {
-        color: #fff;
+        color: @white;
         margin-bottom: 0;
-        background: #000;
+        background: @black;
         font-weight: normal;
         &:hover {
             border-bottom: none;
@@ -99,7 +99,7 @@ h2#navigation-toggle {
         height:0;
         border-left: 7px solid transparent;
         border-right: 7px solid transparent;
-        border-bottom: 7px solid @bodyBg;
+        border-bottom: 7px solid @white;
         border-top: 0;
     }
 }
