--- a/karl/views/static/ux2/css/responsive/768.less
+++ b/karl/views/static/ux2/css/responsive/768.less
@@ -220,9 +220,9 @@
         .smaller();
     }
     .filter {
-        padding: @space/3 * 0.9em;
+        padding: @space/3 * 1em;
         .alphabet {
-            font-size: .9em;
+            font-size: 1em;
         }
     }
 }
