--- a/karl/views/static/ux2/css/typography.less
+++ b/karl/views/static/ux2/css/typography.less
@@ -69,7 +69,7 @@ body {
     line-height: 1.25;
     font-family: @baseFont;
     text-rendering: optimizeLegibility;
-    .css3_linear_gradient(@bodyBg, darken(@bodyBg, 3%));
+    //.css3_linear_gradient(@bodyBg, darken(@bodyBg, 3%));
     //font-size: (@baseFontSize - 4)/@baseFontSize;
     position: relative;
 }
