more spacing and formatting

--- a/karl/views/static/ux2/css/elements/badges.less
+++ b/karl/views/static/ux2/css/elements/badges.less
@@ -4,6 +4,7 @@
 // Base
 .badge {
   padding: 1px 9px 2px;
+  font-family: @baseFont;
   font-size: @baseFontSize * .925;
   font-weight: bold;
   white-space: nowrap;
@@ -44,7 +45,7 @@
 .badge-following {
   display: inline-block;
   .ie7-inline-block();
-  font-family: @fancyFont;
+  //font-family: @fancyFont;
   font-size: 0.8em;
   font-weight: normal;
   margin-right: 5px;
@@ -55,7 +56,7 @@
 .badge-not-following {
   display: inline-block;
   .ie7-inline-block();
-  font-family: @fancyFont;
+  //font-family: @fancyFont;
   font-size: 0.8em;
   font-weight: normal;
   margin-right: 5px;
