--- a/karl/views/static/ux2/css/elements/labels.less
+++ b/karl/views/static/ux2/css/elements/labels.less
@@ -4,7 +4,7 @@
 // Base
 .label {
   padding: 1px 4px 2px;
-  font-family: @fancyFont;
+  font-family: @baseFont;
   font-size: 0.667em;
   font-weight: bold;
   line-height: 13px; // ensure proper line-height if floated
