--- a/karl/views/static/ux2/css/elements/navs.less
+++ b/karl/views/static/ux2/css/elements/navs.less
@@ -126,6 +126,7 @@
 
 // Links rendered as pills
 .nav-pills > li > a {
+  color: @grayLight;
   padding-top: 8px;
   padding-bottom: 8px;
   margin-top: 2px;
@@ -137,7 +138,7 @@
 .nav-pills .active > a,
 .nav-pills .active > a:hover {
   color: @white;
-  background-color: @linkColor;
+  background-color: @grayLight;
 }
 
 
