--- a/karl/views/static/ux2/main.less
+++ b/karl/views/static/ux2/main.less
@@ -58,7 +58,7 @@ a#global-logo {
 
 .section-submenu {
     font-family: @fancyFont;
-    font-size: 0.75em;
+    font-size: 0.8em;
     padding: 0;
     margin: 0;
     .nav-pills {
@@ -68,20 +68,15 @@ a#global-logo {
         margin-top: 0;
         margin-bottom: 0;
     }
-    .nav-pills > li > a:hover {
-        //background: darken(@baseColor2, 10%);
-        color: @white;
-        background-color: @linkColor;
-    }
     // keep backto a real button, reset back the color
     // to what was at the button originally.
     .nav-pills > li > a#backto {
         // ... also, push it up to vertical align it with the border-less pills
         margin-top: -2px;
         &:hover { // as copied out from btn:hover in buttons.less
-            color: @grayDark;
+            color: @white;
             text-decoration: none;
-            background-color: darken(@white, 10%);
+            background-color: @grayLighter;
             background-position: 0 -15px;
             // transition is only when going to hover, otherwise the background
             // behind the gradient (there for IE<=9 fallback) gets mismatched
