more styling fixes

--- a/karl/views/static/ux2/css/elements/portlets.less
+++ b/karl/views/static/ux2/css/elements/portlets.less
@@ -31,12 +31,12 @@
 }
 .contentRelated {
     //.css3_border_radius(.5em);
-    &:before {
-        .trianglePointer(top, darken(@baseColor2, 10%), .5em);
-        position: absolute;
-        top: -0.5em;
-        left: 0.5em;
-    }
+    //&:before {
+    //    .trianglePointer(top, darken(@baseColor2, 10%), .5em);
+    //    position: absolute;
+    //    top: -0.5em;
+    //    left: 0.5em;
+    //}
 }
 .sectionRelated {
     //background: @sectionBlue;
@@ -115,11 +115,11 @@
         margin-right: 0;
         padding: (@space * 1em)/2 0;
     }
-    .contentRelated:before {
-        .trianglePointer(left, darken(@baseColor2, 10%), .5em);
-        top: 0.5em;
-        left: -0.46em;
-    }
+    //.contentRelated:before {
+    //    .trianglePointer(left, darken(@baseColor2, 10%), .5em);
+    //    top: 0.5em;
+    //    left: -0.46em;
+    //}
 }
 
 @media only screen and (min-width: 2024px) {
