--- a/karl/views/static/ux2/css/responsive/1265.less
+++ b/karl/views/static/ux2/css/responsive/1265.less
@@ -14,7 +14,10 @@
         padding-right: 10%;
     }
     .sectionContainer section {
-        .col(8);
+        .col(9);
+    }
+    .column {
+        .col(3);
     }
     .sectionContainer h2 {
         padding-left: 0;
