--- a/karl/views/static/ux2/css/responsive/640.less
+++ b/karl/views/static/ux2/css/responsive/640.less
@@ -38,7 +38,7 @@ a#global-logo{
 .topNavIconWrapper {
     float: left;
 }
-.search .topNavIconWrapper {
+nav.search {
     width: 100%;
 }
 h2#navigation-toggle {
@@ -182,6 +182,7 @@ section.main aside {
     font-size: 0.889em;
 }
 .column {
+    .col(3);
     padding: 0; //(@space * 1em) 0;
     .clearfix();
 }
