--- a/karl/views/static/ux2/css/responsive/2024.less
+++ b/karl/views/static/ux2/css/responsive/2024.less
@@ -7,11 +7,14 @@
     }
     .contentWrapper section.main,
     .sectionContainer section {
-        .col(7);
+        .col(9);
     }
-    .column,
-    .sectionContainer nav.search {
-        .col(5);
+    // .column,
+    // .sectionContainer nav.search {
+    //     //.col(3);
+    // }
+    .column {
+        .col(3);
     }
     form#search-form {
         text-align: right;
